--- a/Template-Kill-the-Monster-main/Template-Kill-the-Monster-main/index.html
+++ b/Template-Kill-the-Monster-main/Template-Kill-the-Monster-main/index.html
@@ -9,6 +9,8 @@
     <script src="Ground.js"></script>
     <script src="Superhero.js"></script>
     <script src="Monster.js"></script>
+    <script src="Block.js"></script>
+    <script src="Throw.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 
   </head>
